--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,9 @@
+Sun Dec 28 10:24:29 2003  Tim Janik  <timj@gtk.org>
+
+	* bserecords.idl:
+	* bsesong.[hc]:
+	* gslfilter.c: s/nominator/numerator/.
+
 Thu Dec 25 07:25:51 2003  Tim Janik  <timj@gtk.org>
 
 	* bsemidievent.[hc]: comment fixups. added SMF meta event types.
