--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Dec 28 13:06:01 2003  Tim Janik  <timj@gtk.org>
+
+	* released 0.5.6.
+
 Sun Dec 28 11:31:44 2003  Tim Janik  <timj@gtk.org>
 
 	* configure.in: up version to 0.5.6, binary/interface age 0.
