--- a/docs/site-news.texi
+++ b/docs/site-news.texi
@@ -34,6 +34,9 @@ Please @uref{mailto://beast@@gnome.org,, drop us a line} at our
 @uref{http://mail.gnome.org/mailman/listinfo/beast/,, mailing list} if you're willing
 to contribute.
 
+And finally, the @uref{beast-doc://screenshots/index,,screen shot area} has had
+some updates, to reflect newer @beast versions.
+
 
 @newsTitle{Monday 27 Oct 2003, BEAST Realease & LinuxUser Article}
 
