--- a/docs/site-news.texi
+++ b/docs/site-news.texi
@@ -11,6 +11,29 @@
 @unnumbered What's New?
 
 
+@newsTitle{Monday 29 Dec 2003, intltool add-on for beast-0.5.6}
+
+Aparently intltool 0.28 which the last beast release uses, requires a specific
+perl module to be available in order to build: So for some users, the build
+has been failing. If you run into build errors like:
+@example
+</tmp/beast-0.5.6>$ make -C data
+make: Entering directory `/tmp/beast-0.5.6/data'
+LC_ALL=C ../intltool-merge ../po beast.desktop.in beast.desktop -d -u -c ../po/.intltool-merge-cache
+The OrigTree module doesn't seem to be properly installed ../intltool-merge
+make: *** [beast.desktop] Error 2
+make: Leaving directory `/tmp/beast-0.5.6/data'
+@end example
+you can apply this patch
+@uref{http://beast.gtk.org/beast-ftp/v0.5/patch-beast-0.5.6-0.5.6+intltool.bz2,, patch-beast-0.5.6-0.5.6+intltool.bz2}
+like:
+@example
+</tmp/beast-0.5.6>$ patch -p1 < patch-beast-0.5.6-0.5.6+intltool
+patching file intltool-modules/XML/Parser/Style/OrigTree.pm
+@end example
+in order to supply the perl module and get intltool to work.
+
+
 @newsTitle{Sunday 28 Dec 2003, BEAST Realease ``Popcorn''}
 
 BEAST/BSE version 0.5.6 is available from the
