--- a/po/cs.po
+++ b/po/cs.po
@@ -1,5 +1,6 @@
 # Czech translation of beast.
 # Copyright (C) 2003 beast'S COPYRIGHT HOLDER
+# Copyright (C) 2003 Miloslav Trmac <mitr@volny.cz>
 # This file is distributed under the same license as the beast package.
 # Miloslav Trmac <mitr@volny.cz>, 2003.
 #
@@ -7,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: beast VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-12-28 13:06+0100\n"
-"PO-Revision-Date: 2003-12-27 20:16+0100\n"
+"POT-Creation-Date: 2003-12-29 14:12+0100\n"
+"PO-Revision-Date: 2003-12-29 19:11+0100\n"
 "Last-Translator: Miloslav Trmac <mitr@volny.cz>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -41,12 +42,11 @@ msgstr "Součit existující projekt do aktuálního projektu"
 
 #: beast-gtk/bstapp.c:57
 msgid "_Import MIDI..."
-msgstr ""
+msgstr "_Importovat MIDI..."
 
 #: beast-gtk/bstapp.c:57
-#, fuzzy
 msgid "Import a standard MIDI file into the current project"
-msgstr "Součit existující projekt do aktuálního projektu"
+msgstr "Importovat standardní soubor MIDI do aktuálního projektu"
 
 #: beast-gtk/bstapp.c:59
 msgid "_Close"
@@ -293,12 +293,12 @@ msgstr "Slučuji projekt `%s'"
 #: beast-gtk/bstfiledialog.c:492
 #, c-format
 msgid "Import MIDI: %s"
-msgstr ""
+msgstr "Import MIDI: %s"
 
 #: beast-gtk/bstfiledialog.c:503
 #, c-format
 msgid "Importing MIDI file `%s'"
-msgstr ""
+msgstr "Importuji soubor MIDI `%s'"
 
 #: beast-gtk/bstfiledialog.c:523
 #, c-format
