--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Dec 29 20:58:04 2003  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstutils.c (bst_action_list_add_cat): fix oversized pixel
+	buffer size computation in memdup.
+
 Mon Dec 29 20:48:58 2003  Tim Janik  <timj@gtk.org>
 
 	* tests/cxxbinding.cc: add missing <unistd.h>, reported by Nedko
