--- a/docs/site-news.texi
+++ b/docs/site-news.texi
@@ -37,9 +37,9 @@ in order to supply the perl module and get intltool to work.
 @newsTitle{Sunday 28 Dec 2003, BEAST Realease ``Popcorn''}
 
 BEAST/BSE version 0.5.6 is available from the
-@uref{beast-doc://download,,download section}.
-@c here is the
-@c @uref{http://gnomedesktop.org/article.php?sid=1422,,FootNotes announcement}.
+@uref{beast-doc://download,,download section},
+here is the
+@uref{http://gnomedesktop.org/article.php?sid=1551,,FootNotes announcement}.
 
 Tarball:
 @uref{http://beast.gtk.org/beast-ftp/v0.5/beast-0.5.6.tar.gz,, beast-0.5.6.tar.gz}
