--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Jan  2 14:39:05 2004  Tim Janik  <timj@gtk.org>
+
+	* ltconfig: more libtool file removal.
+
 Wed Dec 31 16:42:56 2003  Tim Janik  <timj@gtk.org>
 
 	* bstsnifferscope.[hc]: new widget, used internally by bsttrackroll.[hc]
