added bse_wave_set_description_bits() to set comment and similar
Fri Jan  2 19:04:16 2004  Tim Janik  <timj@gtk.org>

        * bsewave.[hc]: added bse_wave_set_description_bits() to set comment and
        similar information from wave file descriptions.
        (bse_wave_load_wave_file): call bse_wave_set_description_bits() if
        requested.
        * bsewave.proc: call bse_wave_set_description_bits() when loading waves.

        * bsewaverepo.proc: call bse_wave_set_description_bits() when loading waves.

        * gslloader.[hc]: added authors, license and comment fields to
        wave descriptions.

        * tests/magictest.c: added -t option to test load file info.

        * gslcommon.[hc]: register AIFF file loader.

        * gslloader-aiff.c: new file loader for AIFF files.

svn path=/trunk/; revision=1774

--- a/TODO
+++ b/TODO
@@ -66,6 +66,7 @@ FIXMES:
 - need tact number entry widget
 - fade in/out of samples in sample editor
 - wave editor: provide transpose spinner for wave preview
+- gslwaveosc resp. gslwavechunk occasionally segfaults on ping-pong loops
 
 DOCS:
 - pressing browsing hotkeys in release-notes dialog does stuff
